// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentHeader component should match the snapshot when rendered with props 1`] = `
<div
  className="ContentHeader-content"
>
  <h1
    className="title"
  >
    Football
     odds
    <button
      className="button-custom "
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-star fa-w-18 "
        data-icon="star"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </button>
  </h1>
  <p
    className="description"
  >
    <span>
      Smarkets betting exchange allows you to bet with the best 
      <span>
        Football
      </span>
      odds - thanks to our small margins and industry-low 2% commission - on all tournaments and competitions
      <span>
         including Premier League, La Liga, Europa League and Champions League.
      </span>
    </span>
  </p>
</div>
`;

exports[`ContentHeader component should toggle the favorite class after the favorite button is clicked 1`] = `
<div
  className="ContentHeader-content"
>
  <h1
    className="title"
  >
    Football
     odds
    <button
      className="button-custom favorite"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-star fa-w-18 "
        data-icon="star"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </button>
  </h1>
  <p
    className="description"
  >
    <span>
      Smarkets betting exchange allows you to bet with the best 
      <span>
        Football
      </span>
      odds - thanks to our small margins and industry-low 2% commission - on all tournaments and competitions
      <span>
         including Premier League, La Liga, Europa League and Champions League.
      </span>
    </span>
  </p>
</div>
`;
